namespace SurveySystem.Domain
{
    public enum SurveyStatus
    {
        Draft, Published, Closed
    }
}
